display flex and stretch for card

--- a/courses.html
+++ b/courses.html
@@ -77,7 +77,7 @@
     <h1 class="mt-4">Feature Courses</h1>
     <div class="container">
       <div class="row mt-1">
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img
               src="images/edited-feature-course-1.jpg"
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img
               src="images/edited-feature-course-2.jpg"
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img
               src="images/edited-feature-course-3.jpg"
@@ -136,7 +136,7 @@
     <h1 class="mt-4">Full-Stack Web Development Courses</h1>
     <div class="container">
       <div class="row mt-1">
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img
               src="images/edited-course-1.jpg"
@@ -166,13 +166,13 @@
                 <i class="fa-regular fa-note-sticky"></i>
                 Introduction to Bootstrap
               </div>
-              <a href="#" class="btn btn-primary text-decoration-none"
+              <a href="#" class="btn btn-primary text-decoration-none mt-3"
                 >Enroll</a
               >
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img
               src="images/edited-course-2.jpg"
@@ -202,13 +202,13 @@
                 <i class="fa-regular fa-note-sticky"></i>
                 Managing Application State with Redux
               </div>
-              <a href="#" class="btn btn-primary text-decoration-none"
+              <a href="#" class="btn btn-primary text-decoration-none mt-3"
                 >Enroll</a
               >
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img
               src="images/edited-course-3.jpg"
@@ -238,7 +238,7 @@
                 <i class="fa-regular fa-note-sticky"></i>
                 Advanced Laravel Features
               </div>
-              <a href="#" class="btn btn-primary text-decoration-none"
+              <a href="#" class="btn btn-primary text-decoration-none mt-3"
                 >Enroll</a
               >
             </div>
