--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <h1 class="mt-4">Our Mentors</h1>
     <div class="container">
       <div class="row mt-1">
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img src="images/teacher-1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -177,7 +177,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img src="images/teacher-2.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -191,7 +191,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-1">
+        <div class="col-lg-4 mt-1 d-flex align-items-stretch">
           <div class="card">
             <img src="images/teacher-3.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -211,7 +211,7 @@
     <h1 class="mt-4">Student Reviews</h1>
     <div class="container">
       <div class="row mt-2">
-        <div class="col-lg-4 mt-2">
+        <div class="col-lg-4 mt-2 d-flex align-items-stretch">
           <div class="card">
             <img src="images/student-1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -235,7 +235,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-2">
+        <div class="col-lg-4 mt-2 d-flex align-items-stretch">
           <div class="card">
             <img src="images/student-2.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -259,7 +259,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-2">
+        <div class="col-lg-4 mt-2 d-flex align-items-stretch">
           <div class="card">
             <img src="images/student-3.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
